src/objects/Email_Queue__c.object
<CustomObject>
    <description>Queue to hold external email jobs that need to be fired off by a scheduled event.  Doing this to handle the security issues that cropped up when trying to send template emails based on API requests from Infocision.</description>
    <fields>
        <fullName>Email_Sent_Time__c</fullName>
        <description>Time the automated process sent the email</description>
        <label>Email Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Changed to true when the job has processed and fired the email off</description>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seminar_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional Seminar Id when a seminar letter is being sent out</description>
        <label>Seminar Id</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Email Queue</relationshipLabel>
        <relationshipName>Email_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the lead record we will be sending the email to</description>
        <label>Target Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Email Queue</relationshipLabel>
        <relationshipName>Email_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <description>Name of the email template we will be sending out</description>
        <label>Template Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Email Queue</label>
    <nameField>
        <displayFormat>EQ-{0}</displayFormat>
        <label>Email Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>